--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             position: fixed;
             bottom: 22px;
             right: 22px;
+            z-index: 1;
         }
 
         .author a img {
