--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         <div class="timeline">
                             <!--item 1-->
                             <div class="item">
-                                <div class="content">z
+                                <div class="content">
                                     <h6 class="text-dark mb-0">Bachelor degree, Physics
                                         <span class="text-muted"> - </span> Lagos State University</h6>
                                     <small class="text-muted">2018-2020
