--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/css/jquery.animatedheadline.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
+
 
 
     <!-- Font Google -->
@@ -125,30 +127,32 @@
                                 <div class="banner">
                                     <div class="row">
                                         <div class="col-md-7">
-                                            <h6 class="text-dark">Hi There,</h6>
-                                            <h1 class="cd-headline clip text-dark">I Am a
-                                                <span class="cd-words-wrapper">
-                                                    <b class="is-visible"> Freelancer</b>
-                                                    <b>Developer</b>
-                                                    <b>Data Scientist</b>
-                                                    <b>Community Builder</b>
-                                                </span>
-                                            </h1>
-
-                                            <p class="max-width-450 text-dark mt-20 ">
-                                                The only limit to Artificial Intelligence(AI) is human imagination
-                                                <p class="small mt-0">― Chris Duffey</p>
-                                            </p>
-                                            <p>I’m a Data Scientist, Backend Developer and Open source enthusiast.
-                                            </p>
-
-                                            <a href="#about" class="btn-custom">
-                                                <span>about me</span>
-                                            </a>
+                                            <div class="contentinfo">
+                                                <h6 class="text-dark">Hi There,</h6>
+                                                <h1 class="cd-headline clip text-dark stylefont">I am a
+                                                    <span class="cd-words-wrapper stylefont txt-color">
+                                                        <b class="is-visible stylefont"> Freelancer</b>
+                                                        <b class="stylefont">Developer</b>
+                                                        <b class="stylefont">Data Scientist</b>
+                                                        <b class="stylefont">Community Builder</b>
+                                                    </span>
+                                                </h1>
+    
+                                                <p class="max-width-450 text-dark mt-20 ">
+                                                    The only limit to Artificial Intelligence(AI) is human imagination
+                                                    <p class="small mt-0">― Chris Duffey</p>
+                                                </p>
+                                                <p>I’m a Data Scientist, Backend Developer and Open source enthusiast.
+                                                </p>
+    
+                                                <a href="#about" class="btn-custom stylebtn">
+                                                    <span>about me</span>
+                                                </a>
+                                            </div>
                                         </div>
 
                                         <div class="col-md-4">
-                                            <img class="img-fluid" src="./assets/img/custom/isreal.jpeg" />
+                                            <img class="img-fluid imgstyle userimage" src="./assets/img/custom/isreal.jpeg" />
                                         </div>
                                     </div>
                                 </div>
@@ -194,12 +198,7 @@
                         <div class="details">
                             <h5>Hello, I’m Israel Aminu</h5>
                             <p class="text-dark mb-25">
-                                I’m a Data Scientist who has a knack for solving problems that relate to data either by
-                                Data Analysis,Machine Learning or deploying existing Machine Learning models into
-                                production leveraging the power of Open Source tools. Also, I also love to be in a team
-                                of developers who are passionately driven towards achieving a desired set of goals. I am
-                                also passionate about community building such as enlightening folks about technology and
-                                its impact in the 21st century.
+                                I’m a Data Scientist who has a knack for solving problems that relate to data either by Data Analysis,Machine Learning or deploying existing Machine Learning models into production leveraging the power of Open Source tools. Also, I also love to be in a team of developers who are passionately driven towards achieving a desired set of goals. I am also passionate about community building such as enlightening folks about technology and its impact in the 21st century.
 
                             </p>
 
@@ -230,11 +229,11 @@
 
                             </ul>
 
-                            <a href="#about" class="btn-custom">
+                            <a href="#about" class="btn-custom stylebtn">
                                 <span>
                                     <i class="fas fa-cloud-download-alt"></i>
                                 </span>
-                                <span>Downland My CV</span>
+                                <span>Download My CV</span>
                             </a>
                         </div>
                     </div>
@@ -338,7 +337,7 @@
                             <!--item 1-->
                             <div class="item">
                                 <div class="content">
-                                    <h6 class="text-dark mb-0">Bachelor degree, Physics
+                                    <h6 class="text-dark mb-0">Bachelor degree, Physics<br>
                                         <span class="text-muted"> - </span> Lagos State University</h6>
                                     <small class="text-muted">2018-2020
                                     </small>
@@ -414,7 +413,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="item">
                             <div class="details">
-                                <p class="font-weight-bold mb-3">Datasist (An Open Source Contribution)</p>
+                                <p class="font-weight-bold mb-3">Datasist<br>- An Open Source Contribution</p>
                                 <p>A python package providing fast, quick, and an abstracted interface to popular and
                                     frequently used functions or techniques relating to data analysis, visualization,
                                     data exploration, feature engineering, Computer, NLP, Deep Learning, modeling, model
@@ -629,7 +628,7 @@
                                     placeholder="Message"></textarea>
                             </div>
 
-                            <button type="submit" name="submit" class="btn-custom">
+                            <button type="submit" name="submit" class="btn-custom stylebtn">
                                 <span><i class="fas fa-paper-plane"></i></span>
                                 <span> Send Message</span>
                             </button>
