--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                         </div>
 
                                         <div class="col-md-4">
-                                            <img class="img-fluid imgstyle userimage" src="./assets/img/custom/isreal.jpeg" />
+                                            <img class="img-fluid imgstyle userimage glitch__effect" src="./assets/img/custom/isreal.jpeg" />
                                         </div>
                                     </div>
                                 </div>
@@ -184,7 +184,7 @@
         <!-- About -->
         <section id="about" class="section about">
             <div class="container">
-                <div class="row mb-50 pt-30">
+                <div class="row mb-10 pt-4">
                     <div class="col-md-12">
                         <div class="section-title">
                             <h2 class="text-dark mb-0">About me</h2>
